# open-entities

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  STEP4-HANDOFF.md  VEHICLE_SEATS.md  group-mission-contract.md  mvp.md
assets/: entities.yaml  init_map.yaml
docs/superpowers/ideas/: 2026-05-16-yaml-template-inheritance.md
docs/superpowers/plans/: 2026-05-16-bevy-ecs-position.md  2026-05-16-core-api-world-export.md  2026-05-16-open-entities-lib-hello.md  2026-05-16-rts-components-export-v2.md  2026-05-16-yaml-spawn-import.md  2026-05-17-component-registry.md  (+6 more)
docs/thinks/: reflection_by_js.md
fixtures/: spawn_entity_templates.yaml
js-app/: CORE-API.md  build-wasm.sh  index.html  package-lock.json  package.json  vite.config.js  vitest.config.ts
js-app/src/: main.input-flow.test.ts  main.js  main.ts  styles.css
open-entities-lib/: Cargo.toml  DESIGN_BASE_MOVE_SPEED.md  DESIGN_MAX_SPEED.md  SIZE_COMPARISON.md
open-entities-lib/examples/: hello.rs  run_ecs.rs  spawn_entity.rs  spawn_yaml.rs  world_json.rs
open-entities-lib/src/: api.rs  core.rs  entity_components.rs  entity_loader.rs  lib.rs  map_loader.rs  simulation.rs  systems.rs  world.rs
open-entities-lib/src/component_registry/: macros.rs  mod.rs  registered.rs
open-entities-lib/src/components/: base_move_speed.rs  entity_type.rs  entity_type_name.rs  faction.rs  health.rs  max_speed.rs  mod.rs  move_target.rs  position.rs  velocity.rs  yaml.rs
open-entities-lib/src/export/: mod.rs
open-entities-lib/src/import/: mod.rs
open-entities-lib/src/systems/: mod.rs  movement.rs  seek.rs  time.rs
open-entities-lib/tests/: ui_tests.rs
open-entities-lib/tests/ui/: register_component_standalone.rs  register_component_standalone.stderr
realized/: TASK.md  ideas.md  talk_01.md
wasm-bindings/: Cargo.toml  README.md
wasm-bindings/demo/: run.mjs
wasm-bindings/src/: lib.rs
(+27 files in other folders)
