[package]
name = "open-entities-lib"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A library for working with entities using the bevy_ecs framework"
license = "MIT"
authors = ["OpenEntities Contributors"]

[dependencies]
bevy_ecs = "0.18"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[lib]
name = "open_entities"
path = "src/lib.rs"

[[example]]
name = "run_ecs"
path = "examples/run_ecs.rs"
